# GoIT_PyWeb_HW_5

./: main.py  pyproject.toml
